# littleblackbook-libc

./: .gitignore  README.md  Vagrantfile
ansible/: requirements.yml
ansible/playbooks/: guest-common.yml  host-install-repos.yml  host-install-vagrant.yml  libc-diet.yml  libc-libbsd.yml  libc-musl.yml
ansible/roles/afl-latest/defaults/: main.yml
ansible/roles/afl-latest/handlers/: main.yml
ansible/roles/afl-latest/tasks/: main.yml
ansible/roles/afl-latest/tests/: test.yml
ansible/roles/afl-latest/vars/: main.yml
ansible/roles/clang/defaults/: main.yml
ansible/roles/clang/files/: 50-littleblackbook-clang.sh
ansible/roles/clang/handlers/: main.yml
ansible/roles/clang/meta/: main.yml
ansible/roles/clang/tasks/: main.yml
ansible/roles/clang/tests/: test.yml
ansible/roles/clang/vars/: main.yml
ansible/roles/cmake/defaults/: main.yml
ansible/roles/cmake/handlers/: main.yml
ansible/roles/cmake/tasks/: main.yml
ansible/roles/cmake/tests/: test.yml
ansible/roles/cmake/vars/: main.yml
docs/: CONTRIBUTING.md  INSTALL.md  OVERVIEW.md
scripts/: infra_supported.py
src/: CMakeLists.txt  audit-notes.md
src/nlist/: CMakeLists.txt  nlist-afl.c  nlist-libfuzzer.c  nlist-test.c  nlist.c  nlist.h
src/nlist/crashes/: crash-invalid-shlink  crash-zero-shentsize
src/staging/: crash-04ca4fbb4df6f3518f63766c729b7744474ceff2  dns  dns-afl.c  dns-libfuzzer.c
src/staging/crashes/: blaat3  blaat4
src/staging/input/: blaat  blaat5
src/tmpnam/: CMakeLists.txt  tmpnam-libfuzzer.c  tmpnam-test.c  tmpnam.c  tmpnam.h
src/unsetenv/: CMakeLists.txt  unsetenv-afl.c  unsetenv-test.c  unsetenv.c  unsetenv.h
